[dependencies]
fs_extra = '1'
futures = '0.3.21'
log = '0.4.17'
tempfile = '3.1.0'

[dependencies.codec]
package = 'parity-scale-codec'
version = '3.0.0'

[dependencies.frame-system]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.kitchensink-runtime]
path = '../runtime'
version = '3.0.0-dev'

[dependencies.node-executor]
path = '../executor'
version = '3.0.0-dev'

[dependencies.node-primitives]
path = '../primitives'
version = '2.0.0'

[dependencies.pallet-asset-tx-payment]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.pallet-transaction-payment]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sc-block-builder]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sc-client-api]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sc-client-db]
branch = 'polkadot-v0.9.30'
features = ['rocksdb']
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sc-consensus]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sc-executor]
branch = 'polkadot-v0.9.30'
features = ['wasmtime']
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sc-service]
branch = 'polkadot-v0.9.30'
features = [
    'test-helpers',
    'rocksdb',
]
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sp-api]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-block-builder]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-blockchain]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-consensus]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '0.10.0-dev'

[dependencies.sp-core]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-inherents]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.sp-io]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-keyring]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-runtime]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '6.0.0'

[dependencies.sp-timestamp]
branch = 'polkadot-v0.9.30'
default-features = false
git = 'https://github.com/paritytech/substrate.git'
version = '4.0.0-dev'

[dependencies.substrate-test-client]
branch = 'polkadot-v0.9.30'
git = 'https://github.com/paritytech/substrate.git'
version = '2.0.0'

[package]
authors = ['Parity Technologies <admin@parity.io>']
description = 'Test utilities for Substrate node.'
edition = '2021'
homepage = 'https://substrate.io'
license = 'GPL-3.0-or-later WITH Classpath-exception-2.0'
name = 'node-testing'
publish = true
repository = 'https://github.com/paritytech/substrate/'
version = '3.0.0-dev'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
